--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Portfolio Website</title>
+    <title>Yashodha Subhasinghe</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/unicons.css">
@@ -84,7 +84,7 @@
                         <div class="custom-btn-group mt-4">
                             <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download
                                 Resume</a>
-                            <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
+                            <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Contact Me</a>
                         </div>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                                 <span>2022</span>
                             </div>
                             <div class="timeline-info">
-                                <h3><span>VWS - Volunteer With Sasnaka</span><small>3<sup>rd</sup> Year Group
+                                <h3><span>VWS - Volunteer With Sasnaka</span><br><small>3<sup>rd</sup> Year Group
                                         Project</small></h3>
                                 <p>A web application for Sasnaka Sansada, which is a charitable social service
                                     organization in Sri Lanka. VWS Facilitates
@@ -176,15 +176,19 @@
                                 <span>2021</span>
                             </div>
                             <div class="timeline-info">
-                                <h3><span>SL Athlete Care</span><small>2<sup>nd</sup> Year Group Project</small></h3>
-                                <p>An injury management system for Sri Lanka Sports Medicine Association</p>
+                                <h3><span>SL Athlete Care</span><br><small>2<sup>nd</sup> Year Group Project</small>
+                                </h3>
+                                <p>SL Athlete Care is a sports injury management system that is built for the Sri Lanka
+                                    Sports Medicine Association.
+                                    This system connects athletes with experts and covers the entire process,
+                                    from an athlete reporting an injury to post-injury recovery.</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-6 col-12">
-                    <h2 class="mb-4 mobile-mt-2">Educations</h2>
+                    <h2 class="mb-4 mobile-mt-2">Education</h2>
 
                     <div class="timeline">
                         <div class="timeline-wrapper">
@@ -192,7 +196,7 @@
                                 <span>2022</span>
                             </div>
                             <div class="timeline-info">
-                                <h3><span>BSc in Information Systems</span><small>2019 - Present</small></h3>
+                                <h3><span>BSc in Information Systems</span><br><small>2019 - Present</small></h3>
                                 <p>University of Colombo School of Computing</p>
                             </div>
                         </div>
@@ -202,7 +206,7 @@
                                 <span>2018</span>
                             </div>
                             <div class="timeline-info">
-                                <h3><span>G.C.E Advanced Level - 2018</span><small>2016 - 2018</small></h3>
+                                <h3><span>G.C.E Advanced Level - 2018</span><br><small>2016 - 2018</small></h3>
                                 <p>Wayamba Royal College - Kurunegala</p>
                             </div>
                         </div>
@@ -248,8 +252,10 @@
                 <div class="col-lg-6 col-12">
                     <div class="contact-form">
                         <h2 class="mb-4">Interested to work together? Let's talk</h2>
+                        <p><a href="https://www.linkedin.com/in/yashodha-subhasinghe-a92b471a4/">LinkedIn</a></p>
+                        <p><a href="https://www.facebook.com/yashodha.subhasinghe">Facebook</a></p>
+                        <p><a href="https://twitter.com/YSubhasinghe">Twitter</a></p>
 
-                    
                     </div>
                 </div>
 
