add new modifications

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+
     <!-- MAIN STYLE -->
     <link rel="stylesheet" href="css/tooplate-style.css">
 
@@ -234,27 +238,33 @@
                     <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
                         <div class="contact-info-item">
                             <h3 class="mb-3 text-white">Say hello</h3>
-                            <p class="footer-text mb-0">+94 76 331 2474</p>
+                            <p class="footer-text mb-0">
+                                <a href="tel:+94 72 4840 984">+94 72 4840 984</a>
+                            </p>
                             <p><a href="mailto:yashodasubasinghe19@gmail.com">yashodasubasinghe19@gmail.com</a></p>
                         </div>
 
-                        <ul class="social-links">
-                            <li><a href="#" class="uil uil-dribbble" data-toggle="tooltip" data-placement="left"
-                                    title="Dribbble"></a></li>
-                            <li><a href="#" class="uil uil-phone" data-toggle="tooltip" data-placement="left"
-                                    title="Instagram"></a></li>
-                            <li><a href="#" class="uil uil-fast-mail" data-toggle="tooltip" data-placement="left"
-                                    title="Youtube"></a></li>
-                        </ul>
                     </div>
                 </div>
 
                 <div class="col-lg-6 col-12">
                     <div class="contact-form">
                         <h2 class="mb-4">Interested to work together? Let's talk</h2>
-                        <p><a href="https://www.linkedin.com/in/yashodha-subhasinghe-a92b471a4/">LinkedIn</a></p>
-                        <p><a href="https://www.facebook.com/yashodha.subhasinghe">Facebook</a></p>
-                        <p><a href="https://twitter.com/YSubhasinghe">Twitter</a></p>
+                        <p> <a href="https://www.linkedin.com/in/yashodha-subhasinghe-a92b471a4/" target="blank"><img
+                                    align="center"
+                                    src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"
+                                    alt="Yashodha Subhasinghe" height="40" width="120" /></a></p>
+                        <p><a href="https://www.facebook.com/yashodha.subhasinghe" target="blank"><img align="center"
+                                    src="https://img.shields.io/badge/Facebook-1877F2?style=for-the-badge&logo=facebook&logoColor=white"
+                                    alt="Yashodha Subhasinghe" height="40" width="120" /></a></p>
+                        <p><a href="https://www.behance.net/yashodhasubhasinghe/" target="blank"><img align="center"
+                                    src="https://img.shields.io/badge/-Behance-blue?style=for-the-badge&logo=behance&logoColor=white"
+                                    alt="Yashodha Subhasinghe" height="40" width="120" /></a></p>
+                        <p><a href="https://twitter.com/YSubhasinghe" target="blank"><img align="center"
+                                    src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white"
+                                    alt="Yashodha Subhasinghe" height="40" width="120" /></a></p>
+
+
 
                     </div>
                 </div>
