--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="col-lg-11 text-center mx-auto col-12">
 
                     <div class="col-lg-8 mx-auto">
-                        <h2>Things I have designed</h2>
+                        <h2>Things I have designed</h2> <br>
                     </div>
 
                     <div class="owl-carousel owl-theme">
@@ -135,7 +135,7 @@
                                 <img src="images/project/Login Page.png" class="img-fluid" alt="project image">
                             </div>
                         </div>
-                        
+
 
                         <div class="item">
                             <div class="project-info">
@@ -149,6 +149,8 @@
                                 <img src="images/project/Login.png" class="img-fluid" alt="project image">
                             </div>
                         </div>
+
+                        
                     </div>
 
                 </div>
@@ -193,6 +195,35 @@
                                     from an athlete reporting an injury to post-injury recovery.</p>
                             </div>
                         </div>
+
+                        <div class="timeline-wrapper">
+                            <div class="timeline-yr">
+                                <span>2021</span>
+                            </div>
+                            <div class="timeline-info">
+                                <h3><span>HealthyTips</span><br><small>Hands-on Project</small>
+                                </h3>
+                                <p>HealthyTips is a simple and charming website where users can view natural remedies,
+                                    health and beauty tips, fitness tips, and advice for solutions to common problems.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="timeline-wrapper">
+                            <div class="timeline-yr">
+                                <span>2021</span>
+                            </div>
+                            <div class="timeline-info">
+                                <h3><span>Fairytales</span><br><small>Hands-on Project</small>
+                                </h3>
+                                <p>Fairytales is an attractive preschool website that provides information and easy
+                                    registration.
+                                    The landing page looks fresh and clean, with clutter-free content from top to
+                                    bottom.</p>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
 
@@ -219,12 +250,66 @@
                                 <p>Wayamba Royal College - Kurunegala</p>
                             </div>
                         </div>
+                        <br>
+                        <br>
 
-                    </div>
-                </div>
+                        <h2 class="mb-4 mobile-mt-2">Certification</h2>
 
-            </div>
-        </div>
+                        <div class="timeline">
+                            <div class="timeline-wrapper">
+                                <div class="timeline-yr">
+                                    <span>2022</span>
+                                </div>
+                                <div class="timeline-info">
+                                    <h3><span>Introduction to Front-End Developments</span><br><small>Cousera |
+                                            Meta</small></h3>
+                                    <p>(Meta Front-End Developer Professional Certificate)</p>
+                                </div>
+                            </div>
+
+                            <div class="timeline">
+                                <div class="timeline-wrapper">
+                                    <div class="timeline-yr">
+                                        <span>2022</span>
+                                    </div>
+                                    <div class="timeline-info">
+                                        <h3><span>Foundations of User Experience (UX) Design</span><br><small>Cousera |
+                                                Google</small></h3>
+                                        <p>(Google UX Design Professional Certificate)</p>
+                                    </div>
+                                </div>
+
+                                <div class="timeline">
+                                    <div class="timeline-wrapper">
+                                        <div class="timeline-yr">
+                                            <span>2022</span>
+                                        </div>
+                                        <div class="timeline-info">
+                                            <h3><span>Introduction to Software Testing</span><br><small>Coursera |
+                                                    University of Minnesota</small></h3>
+                                        </div>
+                                    </div>
+
+                                    <div class="timeline">
+                                        <div class="timeline-wrapper">
+                                            <div class="timeline-yr">
+                                                <span>2022</span>
+                                            </div>
+                                            <div class="timeline-info">
+                                                <h3><span>Web Design for Beginners online learning
+                                                        program</span><br><small>Centre for Open & Distance Learning
+                                                        (CODL)
+                                                        University of Moratuwa </small></h3>
+                                            </div>
+                                        </div>
+
+
+
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
     </section>
 
 
@@ -254,22 +339,28 @@
 
                 <div class="col-lg-6 col-12">
                     <div class="contact-form">
-                        <h2 class="mb-4">Interested to work together? Let's talk</h2>
-                        <p> <a href="https://www.linkedin.com/in/yashodha-subhasinghe-a92b471a4/" target="blank"><img
+                        <h2 class="mb-4">Interested? Let's talk</h2>
+
+                        <p><a href="https://www.linkedin.com/in/yashodha-subhasinghe-a92b471a4/" target="blank"><img
                                     align="center"
                                     src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white"
                                     alt="Yashodha Subhasinghe" height="40" width="120" /></a></p>
+
                         <p><a href="https://www.facebook.com/yashodha.subhasinghe" target="blank"><img align="center"
                                     src="https://img.shields.io/badge/Facebook-1877F2?style=for-the-badge&logo=facebook&logoColor=white"
                                     alt="Yashodha Subhasinghe" height="40" width="120" /></a></p>
+
                         <p><a href="https://www.behance.net/yashodhasubhasinghe/" target="blank"><img align="center"
                                     src="https://img.shields.io/badge/-Behance-blue?style=for-the-badge&logo=behance&logoColor=white"
                                     alt="Yashodha Subhasinghe" height="40" width="120" /></a></p>
+
                         <p><a href="https://twitter.com/YSubhasinghe" target="blank"><img align="center"
                                     src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=twitter&logoColor=white"
                                     alt="Yashodha Subhasinghe" height="40" width="120" /></a></p>
 
-
+                        <p><a href="https://github.com/YashodhaSubhasinghe" target="blank"><img align="center"
+                                    src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"
+                                    alt="Yashodha Subhasinghe" height="40" width="120" /></a></p>
 
                     </div>
                 </div>
