--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a href="#project" class="nav-link"><span data-hover="Projects">Projects</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://www.canva.com/design/DAFJ9FMK-VE/Vnq2AWxFzqiOUkgZKc6vPw/view?utm_content=DAFJ9FMK-VE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                        <a href="https://www.canva.com/design/DAFOkQ2AduE/KkSrL_qUz7GFhrHY0MZgrQ/view?utm_content=DAFOkQ2AduE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
                             class="nav-link"><span data-hover="Resume">Resume</span></a>
                     </li>
                     <li class="nav-item">
@@ -87,7 +87,7 @@
                             design, interfaces and web development.</p>
 
                         <div class="custom-btn-group mt-4">
-                            <a href="https://www.canva.com/design/DAFJ9FMK-VE/Vnq2AWxFzqiOUkgZKc6vPw/view?utm_content=DAFJ9FMK-VE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                            <a href="https://www.canva.com/design/DAFOkQ2AduE/KkSrL_qUz7GFhrHY0MZgrQ/view?utm_content=DAFOkQ2AduE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
                                 class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> View Resume</a>
                             <a href="mailto:yashodasubasinghe19@gmail.com"
                                 class="btn custom-btn custom-btn-bg custom-btn-link">Contact Me</a>
