--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             </div>
                         </h1>
 
-                        <p>Building a successful product is a challenge. I am highly energetic in user experience
+                        <p>Building a successful product is a challenge. I am highly energetic in software testing, UX
                             design, interfaces and web development.</p>
 
                         <div class="custom-btn-group mt-4">
